# 134code

./: cmds.txt
cad/: Arm Assembly.SLDASM  Arm Assembly_NEW.SLDASM  DXFs - Shortcut.lnk  Track_Straight.SLDPRT  Track_Straight_Short.SLDPRT  base plate all.SLDASM  base plate clamp.SLDPRT  base plate.SLDPRT  table.SLDPRT  ~$Arm Assembly.SLDASM
cad/Brackets/: Lower Bracket.SLDASM  alignment triangle.SLDPRT  plate1.SLDPRT  plate2.SLDPRT  top bracket.SLDPRT
cad/DXFs/: alignment triangle.DXF  base plate clamp.DXF  base plate.DXF  gripper motor mount.DXF  plate1.DXF  plate2.DXF  rotary mount.DXF  rotary mount_NEW.DXF  stationart mount.DXF  stationart mount_NEW.DXF
camera_info/: logitech.yaml  logitech_arm.yaml
install/: local_setup.sh  setup.sh  setup.zsh
log/: latest_build
src/vanderbot/: package.xml  setup.cfg  setup.py
src/vanderbot/config/: joint_names_vanderbot.yaml
src/vanderbot/data/rosbag2_2024_02_20-21_47_34/: metadata.yaml  rosbag2_2024_02_20-21_47_34_0.db3
src/vanderbot/launch/: actuate.launch.py  gamestate.launch.py  grabtrack.launch.py  hsvtune.launch.py  showurdf.launch.py  trackdetector.launch.py
src/vanderbot/meshes/: base_link.STL  link_1.STL  link_2.STL  link_3.STL  link_4.STL  link_5.STL  link_6.STL  link_7.STL  link_8.STL  link_9.STL
src/vanderbot/urdf/: console.log.csv  console.log.urdf  vanderbot.csv  vanderbot.urdf
src/vanderbot/vanderbot/: DetectHelpers.py  SegmentQueueDelayed.py  Segments.py  actuate.py  actuateCopy.py  actuate_with_idle.py  detectaruco.py  gamestate.py  hexagonalplanner.py  hsvtune.launch.py  trackdetector.py
(+267 files in other folders)
