<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vanderbot</name>
  <version>0.0.0</version>
  <description>Code for the train-track placing robot, built by Chase Blanchette, Maisha Khanum, Randy Ngo, and Tyler Oribio for EE134, Winter 2023-24 at Caltech</description>
  <maintainer email="chase@caltech.edu">Chase</maintainer>
  <license>MIT 2.0</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
